Fixed #103, addressing student feedback.

--- a/translation.html
+++ b/translation.html
@@ -23,7 +23,7 @@
 		<p><a href="index.html">Back to table of contents</a></p>
 
 		<img src="images/comotion.jpg" class="img-responsive" alt="The front desk of the University of Washington's CoMotion, which supports technology transfer from research." />
-		<small>The front desk of the University of Washington's CoMotion, which supports technology transfer from research.</small>
+		<small>The front desk of the University of Washington's CoMotion, which supports technology transfer from research. Students at UW can use CoMotions resources to learn about entrepreneurship.</small>
 
 		<h1>Translating research into practice</h1>
 		<div class="lead">Amy J. Ko</div>
@@ -56,7 +56,7 @@
 				Had it not seemed (and actually been) feasible, its unlikely Steve Jobs would have taken the risk to have Apple's talented team create Mac OS.
 			</li>
 			<li>
-				<strong>Someone must take an entreprenurial risk</strong>.
+				<strong>Someone must take an entrepreneurial risk</strong>.
 				It doesn't matter how confident researchers are about the feasibility and value of an interface idea.
 				At some point, someone in an organization is going to have to see some opportunity in bringing that interface to the world at scale, and no amount of research will be able to predict what will happen at scale.
 				These risk-taking organizations might be startups, established companies, government entities, non-profits, open source communities, or any other form of community that wants to make something.
@@ -78,6 +78,8 @@
 			<small>Rosie the robot maid, from The Jetsons, cleaning up sandwich debris.</small>
 		</center>
 
+		<h2>Feasibility</h2>
+		
 		<p>
 			The first example we'll consider is what's typically known as <strong>strong AI</strong>.
 			This is the idea of a machine that exhibits behavior that is at least, if not more skillful than human behavior.
@@ -86,14 +88,16 @@
 			The problem of course, is that strong AI isn't (yet) feasible.
 			No researchers have demonstrated any form of strong AI.
 			All AI to date has been <strong>weak AI</strong>, capable of functioning in only narrow ways after significant human effort to gather data to train the AI.
-			Because strong AI is not feasible in the lab, there aren't likely to be any entreprenurs willing to take the risk of bringing something to market at scale.
+			Because strong AI is not feasible in the lab, there aren't likely to be any entrepreneurs willing to take the risk of bringing something to market at scale.
 		</p>
 		
 		<center>
 			<img src="images/bci.jpg" class="img-responsive" alt="Two people with sensors on their heads attempting to operate a brain computer interface." />
-			<small>Two people with sensors on their heads attempting to operate a brain computer interface.</small>
+			<small>Two people with sensors on their heads attempting to operate a brain-computer interface.</small>
 		</center>
 
+		<h2>Risk</h2>
+		
 		<p>
 			That example was fairly obvious of course; something that doesn't work clearly isn't going to be transferred into practice.
 			But what about something that <em>is</em> feasible based on research?
@@ -112,6 +116,8 @@
 			<small>A close up of a person wearing a Google Glass device.</small>
 		</center>
 
+		<h2>Acceptability</h2>
+
 		<p>
 			Of course, just because someone sees an opportunity doesn't mean that there actually is one, or that it will still exist by the time a product is released.
 			Consider, for example, Google Glass, which was based on decades of augmented reality HCI research, led by Georgia Tech researcher <a href="https://www.wired.com/story/google-glass-predicted-the-future/">Thad Starner</a>.
@@ -129,24 +135,28 @@
 			<small>The visual transcript of a person saying 'hello' to Siri, and Siri saying 'Hey' back.</small>
 		</center>
 
+		<h2>Adoption</h2>
+
 		<p>
 			Some interface ideas successfully make it through these various technology transfer barriers.
 			For example, after decades of speech recognition and speech synthesis research, DARPA, the U.S. Department of Defense's Advanced Research Projects Agency, decided to invest in applied research to explore a vision of personal digital assistants.
-			It funded one big five project called <a href="https://en.wikipedia.org/wiki/CALO">CALO</a> ("Cognitive Assistant that Learns and Organizes"), engaging researchers across universities and research labs in the United States in creating a range of digital assistants.
+			It funded one big project called <a href="https://en.wikipedia.org/wiki/CALO">CALO</a> ("Cognitive Assistant that Learns and Organizes"), engaging researchers across universities and research labs in the United States in creating a range of digital assistants.
 			The project led to many spinoff companies, including one called Siri, Inc., which was founded by three researchers at SRI, International, a research lab in Silicon Valley that was charged with being the lead integrator of the CALO project.
 			The <a href="https://www.sri.com/work/timeline-innovation/timeline.php?timeline=computing-digital#!&innovation=siri">Siri company</a> took many of the ideas that the CALO project demonstrated as feasible (speech recognition, high quality speech synthesis, mapping speech to commands), and attempted to build a service out them.
 			After a few rounds of venture capital in 2007, and a few years of product development, Apple acquired Siri, kept its name, and integrated it into the iPhone.
-			In this case, there was no market for standalone digital voice assistants, but Apple saw how Siri could give them competitive advantage in the existing smartphone market: Google, Microsoft, and Amazon quickly followed by creating their own digital voice assistants in order to compete.
-			Once digital voice assistants were widely adopted, this created other opportunities: Amazon, for example, saw the potential for a standalone device and created the smartspeaker device category. 
+			In this case, there was no market for standalone digital voice assistants, but Apple saw how Siri could give them a competitive advantage in the existing smartphone market: Google, Microsoft, and Amazon quickly followed by creating their own digital voice assistants in order to compete.
+			Once digital voice assistants were widely adopted, this created other opportunities: Amazon, for example, saw the potential for a standalone device and created the smart speaker device category. 
 		</p>
 		
+		<h2>Barriers to transfer</h2>
+
 		<p>
 			What are the implications of these stories for someone in innovating in industry?
-			The criteria is pretty clear, even if the strategies for success aren't.
+			The criteria are pretty clear, even if the strategies for success aren't.
 			First, if an interface idea hasn't been rigorously tested in research, building a product (or even a company) out of the idea is very risky.
 			That puts a product team or company in the position of essentially <em>doing</em> research, and as we know, research doesn't always work out.
 			Some companies (e.g., Waymo), decide to take on these high risks, but they often do so with the high expectation of failure.
-			Few companies have the capital to do that, and so the responsibility for high risk innovations falls to governments, academia, and the few industry research labs at big companies willing to invest big risks.
+			Few companies have the capital to do that, and so the responsibility for high-risk innovations falls to governments, academia, and the few industry research labs at big companies willing to invest big risks.
 		</p>
 
 		<p>
@@ -184,6 +194,17 @@
 			Later, just after I returned to UW, I reflected on the numerous challenges I personally faced growing a research idea into a successful product (<a href="https://doi.org/10.1109/ICSE-SEIP.2017.29">Ko 2017</a>).
 			While these personal stories are far from representative of what it takes to transfer research ideas to industry, they do illustrate a common challenge: turning any idea into a reality is a long, challenging, risky process, but a riveting and often rewarding one.
 			Before defaulting to a large established stable company, ask yourself: what might you <em>only</em> learn at a startup that you couldn't learn in an established business?
+		</p>
+		
+		<hr/>
+		
+		<p>
+			There are many ways to close these gaps.
+			We need more contexts for learning about innovations from academia, which freely shares its ideas, but not in a way that industry often notices.
+			We need more students excited to be translators of ideas from research to practice.
+			We need more literacy around entrepreneurship, so that people feel capable of taking bigger risks.
+			And we need a society that enables people to take risks, by providing firmer promises about basic needs such as food, shelter, and health care.
+			Without these, interface innovation will be limited to the narrow few who have the knowledge, the opportunity, and the resources to pursue a risky vision.
 		</p>
 		
 		<center><p class="lead"><a href="index.html">Back to table of contents</a></p></center>
