--- a/help.html
+++ b/help.html
@@ -119,7 +119,7 @@
 			But in practice, most users are goal-oriented, and view onboarding tutorials as a distraction from whatever goal they are trying to complete.
 			Rosson and Carroll (<a href="#rosson">1987</a>) described this as the <em>paradox of the active user</em>.
 			Put simply, users need to learn interfaces to succeed at their goal, but users often view learning as a distraction from their goal.
-			This paradoxical behavior forces designers to consideer ways of embedding that teaching throughout a user's goal-driven behavior.
+			This paradoxical behavior forces designers to consider ways of embedding that teaching throughout a user's goal-driven behavior.
 			For example, this might include waiting until a user reaches a dead end, but making help resources prominent at that dead end.
 			Or, trying to detect if a user is stuck, then recommending relevant help.
 			This paradoxical behavior necessitates the many alternative forms of help in the coming sections.
