Added book to chapter.

--- a/translation.html
+++ b/translation.html
@@ -207,7 +207,7 @@
 			Without these, interface innovation will be limited to the narrow few who have the knowledge, the opportunity, and the resources to pursue a risky vision.
 		</p>
 		
-		<center><p class="lead"><a href="ethics.html">Interface ethics</a></p></center>
+		<center><p class="lead"><a href="ethics.html">Ethics</a></p></center>
 
 		<h2>Further reading</h2>
 
