--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<table class="table">
 			<tr>
-				<td rowspan="17" width="50%">
+				<td rowspan="18" width="50%">
 					<p>The HCI community has a long history of innovation in user interface software and technologies, but there are few surveys or review of all of this research. This book attempts to summarize much of this knowledge, providing a living online textbook for UX designers, researchers, and design-literate developers to learn from and leverage this ever-expanding body of knowledge.</p>
 
 					<p>I hope you enjoy! If not, please file an <a href="https://github.com/andyjko/user-interface-software-and-technology/issues/new">issue</a> on the <a href="https://github.com/andyjko/user-interface-software-and-technology/">the book's GitHub repository</a>.</p>
@@ -82,6 +82,9 @@
 			</tr>
 			<tr>
 				<td>Chapter 17. <a href="translation.html">Technology transfer</a></td>
+			</tr>
+			<tr>
+				<td>Chapter 18. <a href="ethics.html">Ethics</a></td>
 			</tr>
 		</table>
 
