--- a/index.html
+++ b/index.html
@@ -37,63 +37,62 @@
 
 		<table class="table">
 			<tr>
-				<td rowspan="18" width="50%">
+				<td rowspan="18" width="40%">
 					<p>The HCI community has a long history of innovation in user interface software and technologies, but there are few surveys or review of all of this research. This book attempts to summarize much of this knowledge, providing a living online textbook for UX designers, researchers, and design-literate developers to learn from and leverage this ever-expanding body of knowledge.</p>
 
 					<p>I hope you enjoy! If not, please file an <a href="https://github.com/andyjko/user-interface-software-and-technology/issues/new">issue</a> on the <a href="https://github.com/andyjko/user-interface-software-and-technology/">the book's GitHub repository</a>.</p>
-				</td>
-				<td>Chapter 1. <a href="history.html">A history of user interfaces</a></td>
+				<td>Chapter 1</td><td><a href="history.html">A history of user interfaces</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 2. <a href="theory.html">A theory of user interfaces</a></td>
+				<td>Chapter 2</td><td><a href="theory.html">A theory of user interfaces</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 3. <a href="mediation.html">What interfaces mediate</a></td>
+				<td>Chapter 3</td><td><a href="mediation.html">What interfaces mediate</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 4. <a href="declarative.html">Declarative interfaces</a></td>
+				<td>Chapter 4</td><td><a href="declarative.html">Declarative interfaces</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 5. <a href="interactive.html">Interactive interfaces</a></td>
+				<td>Chapter 5</td><td><a href="interactive.html">Interactive interfaces</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 6. <a href="architecture.html">Architecture</a></td>
+				<td>Chapter 6</td><td><a href="architecture.html">Architecture</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 7. <a href="accessibility.html">Accessibility</a></td>
+				<td>Chapter 7</td><td><a href="accessibility.html">Accessibility</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 8. <a href="pointing.html">Pointing</a></td>
+				<td>Chapter 8</td><td><a href="pointing.html">Pointing</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 9. <a href="text-entry.html">Text entry</a></td>
+				<td>Chapter 9</td><td><a href="text-entry.html">Text entry</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 10. <a href="hands.html">Hand-based input</a></td>
+				<td>Chapter 10</td><td><a href="hands.html">Hand-based input</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 11. <a href="body.html">Body-based input</a></td>
+				<td>Chapter 11</td><td><a href="body.html">Body-based input</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 12. <a href="2D.html">2D visual output</a></td>
+				<td>Chapter 12</td><td><a href="2D.html">2D visual output</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 13. <a href="3D.html">3D visual output</a></td>
+				<td>Chapter 13</td><td><a href="3D.html">3D visual output</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 14. <a href="physical.html">Physical output</a></td>
+				<td>Chapter 14</td><td><a href="physical.html">Physical output</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 15. <a href="help.html">Help</a></td>
+				<td>Chapter 15</td><td><a href="help.html">Help</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 16. <a href="ip.html">Intellectual property</a></td>
+				<td>Chapter 16</td><td><a href="ip.html">Intellectual property</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 17. <a href="translation.html">Technology transfer</a></td>
+				<td>Chapter 17</td><td><a href="translation.html">Technology transfer</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 18. <a href="ethics.html">Ethics</a></td>
+				<td>Chapter 18</td><td><a href="ethics.html">Ethics</a></td>
 			</tr>
 		</table>
 
