--- a/help.html
+++ b/help.html
@@ -323,7 +323,7 @@
 			Industry has yet to place this teaching at the center of its design processes, instead still viewing as restricted to unboxing or later technical support.
 		</p>
 
-		<center><p class="lead"><a href="property.html">Next chapter: Intellectual property</a></p></center>
+		<center><p class="lead"><a href="ip.html">Next chapter: Intellectual property</a></p></center>
 
 		<h2>Further reading</h2>
 
