--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 
 		<!-- Peruse -->
-		<!-- <script src="https://faculty.washington.edu/ajko/peruse/peruse.js"></script> -->
-		<script src="peruse.js"></script>
+		<script src="https://faculty.washington.edu/ajko/peruse/peruse.js"></script>
 		<link rel="stylesheet" href="https://faculty.washington.edu/ajko/peruse/peruse.css">
 		<link rel="apple-touch-icon" sizes="180x180" href="https://faculty.washington.edu/ajko/peruse/ios-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="https://faculty.washington.edu/ajko/peruse/favicon.png">
