--- a/translation.html
+++ b/translation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0; URL=http://faculty.uw.edu/ajko/books/uist/#/translation" />
+		<meta http-equiv="refresh" content="0; URL=https://faculty.washington.edu/ajko/books/uist/#/translation" />
 	</head>
 </html>
