Added browser router support

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</style>
 
     </head>
-	<body onload="bookish()">
+	<body onload="bookish('/ajko/books/user-interface-software-and-technology')">
 		
 		<script type="text/javascript">
 		
