--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 		<!-- Bookish -->
 		<script src="https://faculty.washington.edu/ajko/bookish/bookish.js"></script>
 		<link rel="stylesheet" href="https://faculty.washington.edu/ajko/bookish/bookish.css">
-		<link rel="apple-touch-icon" sizes="180x180" href="https://faculty.washington.edu/ajko/peruse/ios-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="https://faculty.washington.edu/ajko/peruse/favicon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="https://faculty.washington.edu/ajko/peruse/favicon.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://faculty.washington.edu/ajko/bookish/images/icons/ios-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://faculty.washington.edu/ajko/bookish/images/icons/favicon.png">
 
 		<!-- Theme -->
 		<style>
