--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta property="og:image" content="https://faculty.washington.edu/ajko/books/foundations-of-information/images/cover.jpg" />
+		<meta property="og:description" content="Foundations of Information | Amy J. Ko" />
 
 		<!-- Bookish -->
 		<script src="https://faculty.washington.edu/ajko/bookish/bookish.js"></script>
