--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+		<base href="/ajko/books/user-interface-software-and-technology/">
+
         <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+		<meta property="og:title" content="User Interface Software and Technology">
 		<meta property="og:image" content="https://faculty.washington.edu/ajko/books/user-interface-software-and-technology/images/cover.jpg" />
 		<meta property="og:description" content="Foundations of Information | Amy J. Ko" />
+		<meta property="og:url" content="https://faculty.washington.edu/ajko/user-interface-software-and-technology">
+
+		<meta name="twitter:card" content="summary_large_image">
 
 		<!-- Bookish -->
-		<script src="https://faculty.washington.edu/ajko/bookish/bookish.js"></script>
-		<link rel="stylesheet" href="https://faculty.washington.edu/ajko/bookish/bookish.css">
-		<link rel="apple-touch-icon" sizes="180x180" href="https://faculty.washington.edu/ajko/bookish/images/icons/ios-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="https://faculty.washington.edu/ajko/bookish/images/icons/favicon.png">
+		<script src="https://bookish.press/bookish.js" defer></script>
+		<link rel="stylesheet" href="https://bookish.press/bookish.css">
+		<link rel="apple-touch-icon" sizes="180x180" href="https://bookish.press/images/icons/ios-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://bookish.press/images/icons/favicon.png">
 
 		<!-- Theme -->
 		<style>
@@ -59,7 +66,7 @@
 		</style>
 
     </head>
-	<body onload="bookish('/ajko/books/user-interface-software-and-technology')">
+	<body>
 		
 		<script type="text/javascript">
 		
