--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-		<!-- <base href="/ajko/books/user-interface-software-and-technology/"> -->
+		<base href="/ajko/books/user-interface-software-and-technology/">
 
         <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
